Trying to fix font on mobile

--- a/assets/ananke/css/custom.css
+++ b/assets/ananke/css/custom.css
@@ -1,3 +1,8 @@
+.font {
+  font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
 h1, h2.fw1, a.f3 {
   text-shadow: 1px 1px 2px black;
+  color: white;
 }
